# qrhi-demo

./: CMakeLists.txt  README.md  main.cpp  offscreen.frag  offscreen.vert  pexels-petr-ganaj-4032582.jpg.license  resources.qrc  texture.frag  texture.vert  window.cpp  window.h
